--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "expo": "^48.0.9",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-reanimated": "~2.14.4",
